--- a/sass/vtex.my-account.scss
+++ b/sass/vtex.my-account.scss
@@ -797,6 +797,7 @@
         }
       }
       :global(.vtex-pageHeader__container) {
+        padding-top: 16px;
         :global(.c-on-base) {
           justify-content: center;
 
