--- a/sass/vtex.store-components.scss
+++ b/sass/vtex.store-components.scss
@@ -1,7 +1,10 @@
 .container {
     width: 100%;
     max-width: 100%;
-    padding: 0;
+    padding: 0 8px;
+    @media screen and (max-width: 48rem) {
+        padding: 0;
+    }
 }
 
 .backToTopButtonActive {
