--- a/sass/home/vtex.flex-layout.scss
+++ b/sass/home/vtex.flex-layout.scss
@@ -18,7 +18,7 @@
     margin-bottom: 6.5rem;
 
     @include breakpoint('mobile') {
-      margin-bottom: 5.5rem;
+      margin-bottom: 8.5rem;
     }
 
     :global(.vtex-store-components-3-x-container) {
@@ -201,6 +201,7 @@
     &--mobile-home-categories-showcase {
       display: flex;
       position: relative;
+      transform: translateY(14px);
 
       :global(.vtex-store-components-3-x-imageElement) {
         margin: 0 auto;
@@ -224,7 +225,8 @@
         align-items: center;
       }
       &:last-child {
-        height: 0 !important;
+        //height: 0 !important;
+        transform: translateY(25px);
         text-align: center;
       }
     }
