--- a/sass/login/vtex.login.scss
+++ b/sass/login/vtex.login.scss
@@ -23,6 +23,7 @@
   }
 
   .loginOptionsContainer {
+    margin-top: 25px;
     min-height: 240px !important;
     max-width: 427px;
     border-radius: 4px;
@@ -33,15 +34,6 @@
     }
     .optionsSticky {
         .formTitle {
-            // text-align: left;
-            // padding: 0;
-            // margin: 0 0 32px;
-            // font-style: normal;
-            // font-weight: 300;
-            // font-size: 0;
-            // line-height: 100%;
-            // align-items: center;
-            // color: #111;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -111,6 +103,12 @@
   }
 
   .contentForm {
+
+      .emailForm .inputContainerEmail {
+          :global(.vtex-input-prefix__group) {
+              margin: 0 auto;
+          }
+      }
 
       .emailVerification {
           .formTitle {
@@ -206,10 +204,10 @@
 
       .formFooter {
           text-align: center;
-          margin-top: 16px;
           padding: 0;
           border: none;
           width: 280px;
+          margin: 16px auto 0;
 
           .sendButton {
               min-width: 131px;
@@ -257,8 +255,6 @@
         color: white;
         padding: 18px;
         position: absolute;
-        // top: 170px;
-        // right: 294px;
         transform: translate(417px, -151px);
         box-sizing: border-box;
         height: 40px;
