--- a/sass/footer/vtex.menu.scss
+++ b/sass/footer/vtex.menu.scss
@@ -1,3 +1,4 @@
+
 .styledLinkContainer {
   &--footerMenu {
     margin: 8px 0;
@@ -16,7 +17,7 @@
         transition: color 0.5s ease;
 
         &:hover {
-          color: #e30613;
+          color: $blue-hover;
         }
       }
     }
