--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -441,19 +441,30 @@
   &--container-pdp-quantity-and-add-to-cart {
     position: relative;
     height: 105px;
-    .flexColChild----container-pdp-quantity-and-add-to-cart:last-child {
-      position: absolute;
-      height: 4500px;
-      top: 25px;
-      left: 0;
-      pointer-events: none;
-      width: 107%;
-      z-index: 10;
-      margin: -10px;
-      .flexRow--pdp-quantity-and-add-to-cart-children {
-        position: sticky;
-        top: calc(100% - 120px);
-        background-color: $white;
+    .flexColChild--container-pdp-quantity-and-add-to-cart {
+      &:first-child {
+        margin-left: auto;
+        margin-right: 60px;
+        @include breakpoint("mobile") {
+          margin-right: 20px;
+        }
+      }
+      @include breakpoint("mobile") {
+        &:last-child {
+          position: absolute;
+          height: 4500px !important;
+          top: 25px;
+          left: 0;
+          pointer-events: none;
+          width: 107%;
+          z-index: 4;
+          margin: -10px;
+        }
+        .flexRow--pdp-quantity-and-add-to-cart-children {
+          position: sticky;
+          top: calc(100% - 110px);
+          background-color: $white;
+        }
       }
     }
   }
