Fix: refactor style, remove background in the product-quantity container and insert background in the product-quantity child

--- a/sass/product/vtex.product-quantity.scss
+++ b/sass/product/vtex.product-quantity.scss
@@ -13,6 +13,7 @@
     border: 1px solid $blue-active;
     border-radius: 0.25rem;
     width: 11.25rem;
+    background-color: $white;
 
     @include breakpoint('mobile') {
       margin-right: 0.25rem;
