[bugfix/21896] adding background image in section two of the homepage

--- a/sass/home/vtex.rich-text.scss
+++ b/sass/home/vtex.rich-text.scss
@@ -184,6 +184,7 @@
   }
 
   .headingLevel2 {
+    margin: 26px 0 0;
     &--home-section-title {
       @include breakpoint('mobile') {
         margin: 0 0 1rem;
