--- a/sass/home/vtex.flex-layout.scss
+++ b/sass/home/vtex.flex-layout.scss
@@ -35,7 +35,20 @@
     @include container-main;
   }
   &--home-shelf-02 {
-    @include container-main;
+    background-image: url(assets/images/bg-home-section2-desktop.svg);
+    background-repeat: no-repeat;
+    padding: 0;
+    width: 100%;
+    height: 600px;
+    @include breakpoint('mobile') {
+      background-image: url(assets/images/bg-home-section2-mobile.svg);
+      height: 586px;
+      max-width: 100vw;
+    }
+    :global(.vtex-store-components-3-x-container){
+      @include container-main;
+    }
+
   }
   &--home-shelf-03 {
     @include container-main;
