[bugfix/ 22072] Settings on the login page.

--- a/sass/home/vtex.flex-layout.scss
+++ b/sass/home/vtex.flex-layout.scss
@@ -40,6 +40,8 @@
     padding: 0;
     width: 100%;
     height: 600px;
+    background-color: #f6f6f6;
+
     @include breakpoint('mobile') {
       background-image: url(assets/images/bg-home-section2-mobile.svg);
       height: 586px;
